--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -163,7 +163,7 @@ collections:
                           fields:
                             [
                               { name: name, label: Nom, widget: string },
-                              { name: icon, label: Icone, widget: string },
+                              { name: link, label: Link, widget: string },
                             ],
                         },
                       ],
@@ -223,7 +223,7 @@ collections:
                             ],
                         },
                         {
-                          name: name,
+                          name: surname,
                           label: Prénom,
                           widget: object,
                           fields:
@@ -237,7 +237,7 @@ collections:
                             ],
                         },
                         {
-                          name: name,
+                          name: email,
                           label: Email,
                           widget: object,
                           fields:
@@ -251,7 +251,7 @@ collections:
                             ],
                         },
                         {
-                          name: name,
+                          name: phoneNumber,
                           label: Numéro de téléphone,
                           widget: object,
                           fields:
@@ -265,7 +265,7 @@ collections:
                             ],
                         },
                         {
-                          name: name,
+                          name: subject,
                           label: Sujet,
                           widget: object,
                           fields:
@@ -279,7 +279,7 @@ collections:
                             ],
                         },
                         {
-                          name: name,
+                          name: textarea,
                           label: Partie texte,
                           widget: object,
                           fields:
@@ -309,15 +309,17 @@ collections:
                         { name: email, label: Email, widget: string },
                       ],
                   },
-                  {
-                    name: gpsDatas,
-                    label: Coordonnées GPS,
-                    widget: object,
-                    fields:
-                      [
-                        { name: latitude, label: Latitude, widget: number },
-                        { name: longitude, label: Longitude, widget, number },
-                      ],
-                  },
+                  
                 ],
             }
+            - {
+                name: gpsDatas,
+                label: Coordonnées GPS,
+                widget: object,
+                fields:
+                  [
+                    { name: latitude, label: Latitude, widget: string },
+                    { name: longitude, label: Longitude, widget: string },
+                  ],
+              }
+
