--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pigeon-overlay": "^0.2.3",
     "prismjs": "^1.15.0",
     "react": "^16.8.3",
+    "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.3",
     "react-headroom": "^2.2.8",
     "react-helmet": "^5.2.0",
