--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-headroom": "^2.2.8",
     "react-helmet": "^5.2.0",
     "react-id-swiper": "^2.1.1",
+    "react-responsive-navbar": "^1.0.11",
     "react-reveal": "^1.2.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-less": "^2.4.1",
