--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pigeon-overlay": "^0.2.3",
     "prismjs": "^1.15.0",
     "react": "^16.8.3",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.3",
     "react-headroom": "^2.2.8",
@@ -52,6 +53,7 @@
     "react-id-swiper": "^2.1.1",
     "react-motion-drawer": "^3.1.0",
     "react-reveal": "^1.2.2",
+    "react-scrollable-anchor": "^0.6.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-less": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
