--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-motion-drawer": "^3.1.0",
     "react-reveal": "^1.2.2",
     "react-scrollable-anchor": "^0.6.1",
+    "react-spring": "^8.0.19",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-less": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
