--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
+    "faker": "^4.1.0",
     "gatsby": "^2.1.3",
     "gatsby-image": "^2.0.35",
     "gatsby-paginate": "^1.0.17",
