--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -37,6 +37,7 @@ collections:
 
   - name: authors
     label: Auteurs
+    identifier_field: name
     folder: src/contenu/authors
     create: true
     fields:
