--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -26,7 +26,15 @@ collections:
     fields:
       - { name: title, label: Titre }
       - { name: date, label: Date, widget: date }
-      - { name: author, label: Auteur }
+      - {
+          name: author,
+          label: Auteur,
+          widget: relation,
+          collection: authors,
+          searchFields: ["name"],
+          valueField: name,
+          multiple: true,
+        }
       - { name: thumbnail, label: Vignette, widget: image }
       - {
           name: tags,
