--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-    "clean": "rm -rf .cache"
+    "clean": "rm -rf .cache public"
   },
   "dependencies": {
     "gatsby": "^2.1.3",
