--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "commit42",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Site de la société commit42",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
